@startuml
hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam nodesep 60
skinparam ranksep 70
skinparam dpi 160
left to right direction
title STUDY2WORK - ASSESSMENT Module

package "ASSESSMENT" {
  together {
    entity "quizzes" as quizzes {
      * id : BIGINT
      --
      course_id : BIGINT
      title : VARCHAR
      time_limit_minutes : INT
      passing_score : DECIMAL
      max_attempts : INT
      status : VARCHAR
    }

    entity "quiz_questions" as quiz_questions {
      * id : BIGINT
      --
      quiz_id : BIGINT
      question_text : LONGTEXT
      question_type : VARCHAR
      difficulty_level : VARCHAR
      score_weight : DECIMAL
      sort_order : INT
    }

    entity "quiz_options" as quiz_options {
      * id : BIGINT
      --
      question_id : BIGINT
      option_text : VARCHAR
      is_correct : BOOLEAN
      sort_order : INT
    }

    entity "quiz_attempts" as quiz_attempts {
      * id : BIGINT
      --
      quiz_id : BIGINT
      user_id : BIGINT
      started_at : DATETIME
      submitted_at : DATETIME
      score : DECIMAL
      passed : BOOLEAN
      status : VARCHAR
    }

    entity "quiz_answers" as quiz_answers {
      * id : BIGINT
      --
      attempt_id : BIGINT
      question_id : BIGINT
      selected_option_id : BIGINT
      answer_text : LONGTEXT
      is_correct : BOOLEAN
      score_earned : DECIMAL
    }

    entity "assignments" as assignments {
      * id : BIGINT
      --
      course_id : BIGINT
      title : VARCHAR
      due_at : DATETIME
      allow_late_submission : BOOLEAN
      max_score : DECIMAL
      status : VARCHAR
    }

    entity "assignment_submissions" as assignment_submissions {
      * id : BIGINT
      --
      assignment_id : BIGINT
      user_id : BIGINT
      content_text : LONGTEXT
      file_url : VARCHAR
      submitted_at : DATETIME
      status : VARCHAR
      score : DECIMAL
      reviewed_by : BIGINT
      reviewed_at : DATETIME
    }

    entity "coding_labs" as coding_labs {
      * id : BIGINT
      --
      course_id : BIGINT
      title : VARCHAR
      starter_code : LONGTEXT
      expected_output : LONGTEXT
      time_limit_minutes : INT
      max_score : DECIMAL
      status : VARCHAR
    }

    entity "coding_lab_attempts" as coding_lab_attempts {
      * id : BIGINT
      --
      coding_lab_id : BIGINT
      user_id : BIGINT
      source_code : LONGTEXT
      submitted_at : DATETIME
      compile_status : VARCHAR
      test_status : VARCHAR
      score : DECIMAL
      status : VARCHAR
    }

    entity "code_reviews" as code_reviews {
      * id : BIGINT
      --
      review_type : VARCHAR
      submission_id : BIGINT
      lab_attempt_id : BIGINT
      mentor_user_id : BIGINT
      review_text : LONGTEXT
      status : VARCHAR
    }
  }
}

quizzes ||--o{ quiz_questions
quiz_questions ||--o{ quiz_options
quizzes ||--o{ quiz_attempts
quiz_attempts ||--o{ quiz_answers
quiz_questions ||--o{ quiz_answers
quiz_options ||--o{ quiz_answers : selected
assignments ||--o{ assignment_submissions
coding_labs ||--o{ coding_lab_attempts
assignment_submissions ||--o{ code_reviews
coding_lab_attempts ||--o{ code_reviews

@enduml
